Change logo to Pari, align hero roles as vertical bullet list

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar">
         <div class="nav-container">
-            <a href="#home" class="nav-logo">PP</a>
+            <a href="#home" class="nav-logo">Pari</a>
             <button class="nav-toggle" id="navToggle" aria-label="Toggle navigation">
                 <span></span><span></span><span></span>
             </button>
@@ -45,19 +45,14 @@
                     <span class="typewriter-text" id="typewriter"></span>
                     <span class="typewriter-cursor">|</span>
                 </div>
-                <div class="hero-roles">
-                    <span class="hero-role">Technical Courseware Developer at Zscaler</span>
-                    <span class="hero-role-divider">&bull;</span>
-                    <span class="hero-role">Cybersecurity Professional</span>
-                    <span class="hero-role-divider">&bull;</span>
-                    <span class="hero-role">Academician &mdash; Lecturer</span>
-                    <span class="hero-role-divider">&bull;</span>
-                    <span class="hero-role">APNIC, APSIG, APIGA, APrIGF Fellow</span>
-                    <span class="hero-role-divider">&bull;</span>
-                    <span class="hero-role">Cloud Security</span>
-                    <span class="hero-role-divider">&bull;</span>
-                    <span class="hero-role">Singer</span>
-                </div>
+                <ul class="hero-roles">
+                    <li class="hero-role">Technical Courseware Developer at Zscaler</li>
+                    <li class="hero-role">Cybersecurity Professional</li>
+                    <li class="hero-role">Academician &mdash; Lecturer</li>
+                    <li class="hero-role">APNIC, APSIG, APIGA, APrIGF Fellow</li>
+                    <li class="hero-role">Cloud Security</li>
+                    <li class="hero-role">Singer</li>
+                </ul>
                 <div class="hero-buttons">
                     <a href="#contact" class="btn btn-primary">Get In Touch</a>
                     <a href="Paribhasha_Pradhan_CV_2025.pdf" class="btn btn-outline" target="_blank">Download CV</a>
